<resources>
    <string name="app_name">ExamenPabloEntrallaRosas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pon">Añadir</string>
    <string name="mira">Consultar</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="potencia">Potencia</string>
    <string name="precio">Precio</string>

</resources>
